<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Дефекты сварки</string>
    <string name="login_title">Вход в систему</string>
    <string name="login_subtitle">Авторизуйтесь как сотрудник предприятия</string>
    <string name="server_url">Адрес сервера</string>
    <string name="username">Логин</string>
    <string name="password">Пароль</string>
    <string name="login_action">Войти</string>
    <string name="login_processing">Выполняется вход...</string>
    <string name="login_hint">Для текущего теста: http://192.168.0.104:8000/. Если IP компьютера изменился, укажите новый адрес.</string>
    <string name="screen_title">Контроль сварного шва</string>
    <string name="take_photo">Переснять</string>
    <string name="capture_photo">Снять</string>
    <string name="pick_gallery">Галерея</string>
    <string name="run_segmentation">Анализ</string>
    <string name="send_report">Отправить</string>
    <string name="report_sent_button">Отправлено</string>
    <string name="retake_photo">Переснять</string>
    <string name="analyzing_button">Анализ...</string>
    <string name="new_photo">Новый снимок</string>
    <string name="history">История</string>
    <string name="history_title">История отчетов</string>
    <string name="history_empty">Пока нет сохраненных отчетов.</string>
    <string name="retry_send">Повторить отправку</string>
    <string name="retry_all">Отправить ожидающие</string>
    <string name="close_photo">Закрыть</string>
    <string name="torch">Фонарик</string>
    <string name="status_ready">Наведите камеру на шов.</string>
    <string name="status_camera_ready">Камера готова. Наведите на шов и нажмите «Снять».</string>
    <string name="status_offline_mode">Офлайн-режим. Можно анализировать, отчеты сохранятся в истории.</string>
    <string name="status_photo_ready">Фото получено. Можно запускать анализ.</string>
    <string name="status_image_ready">Изображение загружено. Можно запускать анализ.</string>
    <string name="status_processing">Выполняется анализ…</string>
    <string name="status_done">Анализ завершен.</string>
    <string name="status_uploading">Отправляем отчет…</string>
    <string name="status_uploaded">Отчет отправлен.</string>
    <string name="status_saved_for_retry">Отчет сохранен в истории. Его можно отправить позже.</string>
    <string name="status_upload_error">Отчет не отправлен.</string>
    <string name="status_error">Ошибка анализа.</string>
    <string name="no_image">Сначала выберите изображение</string>
    <string name="result_title">Сводка анализа</string>
    <string name="objects_found">Найдено объектов: %d</string>
    <string name="no_objects">Объекты не найдены.</string>
    <string name="class_counts">Количество по классам:</string>
    <string name="camera_permission_required">Для съёмки необходимо разрешение на камеру</string>
    <string name="location_permission_hint">Разрешите геолокацию, чтобы привязывать отчеты к месту съемки.</string>
    <string name="login_first_online_required">Сервер недоступен. Для первого входа нужен доступ к серверу. После входа приложение сможет работать офлайн.</string>
</resources>
